--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Lucas K Allmon",
   "dependencies": {
+    "axios": "^0.19.2",
     "discord.js": "12.1.1",
     "dotenv": "8.2.0",
     "lodash": "4.17.15"
